--- a/index.html
+++ b/index.html
@@ -5,58 +5,51 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Mi Álbum</title>
   <style>
-    :root { --pad: 14px; }
-    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial; margin: 0; background:#f6f7f9; }
-    header { position: sticky; top: 0; background: rgba(255,255,255,.92); backdrop-filter: blur(10px);
-             border-bottom: 1px solid #e8e8e8; padding: var(--pad); z-index: 10; }
-    .title { font-weight: 700; font-size: 18px; }
-    .sub { font-size: 12px; color: #666; margin-top: 4px; }
-    .wrap { padding: var(--pad); }
-    .grid { display:grid; grid-template-columns: repeat(auto-fill, minmax(120px, 1fr)); gap: 10px; }
-    .card { background:#fff; border-radius: 14px; overflow:hidden; box-shadow: 0 6px 18px rgba(0,0,0,.06); }
-    .card img { width:100%; height:140px; object-fit: cover; display:block; background:#ddd; }
-    .empty { color:#666; text-align:center; padding: 40px 10px; }
-    .fabbar { position: fixed; left: 0; right: 0; bottom: 0; padding: 12px 14px; }
-    .bar { display:flex; gap:10px; background:#fff; border-radius: 18px; padding: 10px; box-shadow: 0 14px 40px rgba(0,0,0,.12); }
-    button { border: 1px solid #e6e6e6; background:#fff; padding: 12px 14px; border-radius: 14px; font-weight: 600; }
-    button.primary { flex: 1; border: none; background:#111; color:#fff; }
-    button:disabled { opacity: .6; }
-    video { width:100%; max-height: 320px; border-radius: 16px; background:#111; display:none; }
-    .row { display:flex; gap:10px; margin: 10px 0; }
-    .toast { position: fixed; top: 12px; left: 50%; transform: translateX(-50%);
-             background:#111; color:#fff; padding:10px 12px; border-radius: 12px; display:none; }
+    body{margin:0;font-family:system-ui;background:#f6f7f9}
+    header{position:sticky;top:0;background:#fff;border-bottom:1px solid #e8e8e8;padding:14px;z-index:10}
+    .title{font-weight:800}
+    .sub{font-size:12px;color:#666;margin-top:4px}
+    .wrap{padding:14px}
+    .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(120px,1fr));gap:10px}
+    .card{background:#fff;border-radius:14px;overflow:hidden;box-shadow:0 6px 18px rgba(0,0,0,.06)}
+    .card img{width:100%;height:140px;object-fit:cover;display:block;background:#ddd}
+    .fabbar{position:fixed;left:0;right:0;bottom:0;padding:12px 14px}
+    .bar{display:flex;gap:10px;background:#fff;border-radius:18px;padding:10px;box-shadow:0 14px 40px rgba(0,0,0,.12)}
+    button{border:1px solid #e6e6e6;background:#fff;padding:12px 14px;border-radius:14px;font-weight:700}
+    button.primary{flex:1;border:none;background:#111;color:#fff}
+    video{width:100%;max-height:320px;border-radius:16px;background:#111;display:none}
+    .row{display:flex;gap:10px;margin:10px 0;display:none}
+    .empty{color:#666;text-align:center;padding:40px 10px;display:none}
   </style>
 </head>
 <body>
-  <header>
-    <div class="title">Álbum de Boda</div>
-    <div class="sub">Toma las fotos que quieras y compartela con nosotros</div>
-  </header>
+<header>
+  <div class="title">Nuestro Álbum de Fotos</div>
+  <div class="sub">Comparte todas las fotos con nosotros</div>
+</header>
 
-  <div class="wrap">
-    <div class="toast" id="toast"></div>
-
-    <video id="video" autoplay playsinline></video>
-    <div class="row" id="cameraRow" style="display:none;">
-      <button id="btnCloseCam">Cerrar</button>
-      <button id="btnSnap" class="primary">Tomar y subir</button>
-    </div>
-
-    <div id="grid" class="grid"></div>
-    <div id="empty" class="empty" style="display:none;">Aún no hay fotos. Usa el botón de cámara.</div>
+<div class="wrap">
+  <video id="video" autoplay playsinline></video>
+  <div class="row" id="cameraRow">
+    <button id="btnClose">Cerrar</button>
+    <button id="btnSnap" class="primary">Tomar y subir</button>
   </div>
 
-  <div style="height: 96px;"></div>
-  <div class="fabbar">
-    <div class="bar">
-      <button id="btnReload">Refrescar</button>
-      <button id="btnCamera" class="primary">📷 Cámara</button>
-      <input id="filePick" type="file" accept="image/*" capture="environment" style="display:none;" />
-      <button id="btnUpload">Subir</button>
-    </div>
-  </div>
+  <div id="grid" class="grid"></div>
+  <div id="empty" class="empty">Aún no hay fotos. Usa el botón de cámara.</div>
+</div>
 
-  <canvas id="canvas" style="display:none;"></canvas>
-  <script src="./app.js"></script>
+<div style="height:96px"></div>
+<div class="fabbar">
+  <div class="bar">
+    <button id="btnReload">Refrescar</button>
+    <button id="btnCamera" class="primary">📷 Cámara</button>
+    <input id="filePick" type="file" accept="image/*" capture="environment" style="display:none" />
+    <button id="btnUpload">Subir</button>
+  </div>
+</div>
+
+<canvas id="canvas" style="display:none"></canvas>
+<script src="./app.js"></script>
 </body>
 </html>
