Eliminacion del boton subir

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <!-- CÁMARA (con capture) -->
     <input id="fileCamera" type="file" accept="image/*" capture="environment" style="display:none" />
-    <button id="btnUpload">Subir</button>
+    <!-- <button id="btnUpload">Subir</button> -->
   </div>
 </div>
 
